# FusionTrace-AI-Powered-Multimodal-Deepfake-Detection

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: python-ci.yml
backend/: .gitignore  config.yaml  pyproject.toml  requirements.txt
backend/app/: advanced_fusion.py  audio_detection.py  config.py  config1.py  enhanced_image_detection.py  explainable_dashboard.py  gradio_app.py  image_detection.py  main.py  main1.py  main2.py  report_generator.py  video_detection.py  visualization_engine.py
backend/models/audio_model/: model.safetensors
backend/models/image_model/: EfficientnetV2_model.pth
backend/notebook/audio_detection/: EDA.ipynb  data_organize.ipynb  dataset_download.ipynb  model_train_5.0.ipynb
backend/notebook/image_detection/: image_data_download.ipynb  image_deepfake_detection (2).ipynb  image_deepfake_detection.ipynb  image_detection_dataset.py  model_training.py
backend/templates/: index.html  upload.html
backend/templates/static/css/: styles.css
backend/templates/static/js/: script.js
backend/test/: test_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/components/: AuthModal.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Industries.tsx  MultimodalDemo.tsx  UploadDetect.tsx
resources/docs/: LiveLink.txt  diagrams.md
